--- a/css/style.css
+++ b/css/style.css
@@ -30,5 +30,7 @@
   text-decoration: none;
 }
 #main-navbar ul li a:hover {
-  background-color: #000;
+  text-decoration: underline;
+  text-decoration-color: #9DC88D;
+  text-decoration-thickness: 5px;
 }
