--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #main-navbar {
   font-family: 'Lilita One', cursive;
   font-size: 20px;
-  background-color: #4D774E;
+  background-color: darkseagreen;
   overflow: hidden;
 }
 #navbar-container {
