--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,6 @@
 }
 #main-navbar ul li a:hover {
   text-decoration: underline;
-  text-decoration-color: #9DC88D;
+  text-decoration-color: darkolivegreen;
   text-decoration-thickness: 5px;
 }
