--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,10 @@
   text-decoration-thickness: 5px;
 }
 #cat-wave{
-  text-align: center;
-  width: 6em;
-  margin: 72px 42px 42px 2px;
+  float: center;
+  width: 260px;
+  height: 260px;
+  border-radius: 25%;
 }
 #nav-body{
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v935-aum-03_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9c34a3160a757b89ac9cb496bec6ca5c);
