--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,19 @@ h2 {
   font-family: Lucida Handwriting;
 
 }
+#contact-info {
+  text-align: center;
+  border-style: inset;
+  border-color: mediumvioletred;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px;
+  background: darkseagreen;
+  transition: all .2s ease-in-out; 
+}
+
+#contact-info:hover { 
+  transform: scale(1.1); 
+}
