trying to fix center

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@
   text-decoration-thickness: 5px;
 }
 #cat-wave{
-  float: center;
+  margin-left: 2vw;
+  margin-right: 2vw;
   width: 300px;
   height: 300px;
   border-radius: 25%;
