--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,14 @@ h2 {
 #contact-info:hover { 
   transform: scale(1.1); 
 }
+.infoCol1{
+  width: 60%;
+  margin-left: 2%;
+  padding: 4%;
+  box-shadow: 0 0 8px 8px #F4D4B8 inset;
+}
+
+.infoCol12{
+  width: 30%;
+  box-shadow: 0 0 8px 8px #F4D4B8 inset;
+}
