--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ h2 {
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
 
-#info-box-2{
+.info-box-2{
   width: 30%;
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
