--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,10 @@ h2 {
   padding: 4%;
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
+#foodimg{
+  margin-left: 2vw;
+  margin-right: 2vw;
+  width: 300px;
+  height: 300px;
+  border-radius: 25%;
+}
