--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ h2 {
   padding: 4%;
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
-#food-img{
+.food-img{
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
