--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
   text-decoration-color: darkolivegreen;
   text-decoration-thickness: 5px;
 }
-.cat-wave{
+#cat-wave{
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
