--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,21 @@
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v935-aum-03_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9c34a3160a757b89ac9cb496bec6ca5c);
 }
 h2 {
-  background-color: mediumvioletred;
-  color: lightpink;
-  font-size: 60px;
+  #contact-info {
   text-align: center;
-  font-family: Lucida Handwriting;
+  border-style: inset;
+  border-color: mediumvioletred;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px;
+  background: darkseagreen;
+  transition: all .2s ease-in-out; 
+}
 
+h2:hover { 
+  transform: scale(1.1); 
 }
 #contact-info {
   text-align: center;
