--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
   text-decoration-color: darkolivegreen;
   text-decoration-thickness: 5px;
 }
-#cat-wave{
+#cat-img{
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
@@ -45,7 +45,6 @@
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v935-aum-03_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9c34a3160a757b89ac9cb496bec6ca5c);
 }
 #heading-info {
-  #contact-info {
   text-align: center;
   border-style: inset;
   border-color: mediumvioletred;
