--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,9 @@
   height: 300px;
   border-radius: 25%;
 }
+.info-box-3{
+  width: 60%;
+  margin-left: 32%;
+  padding: 4%;
+  box-shadow: 0 0 8px 8px #F4D4B8 inset;
+}
