--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
   padding: 4%;
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
-.all.info {
+.all-info {
   width: 100%;
   padding: 4%;
   box-shadow: 0 0 8px 8px #F4D4B8 inset;
