--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,22 @@
 #heading-info:hover { 
   transform: scale(1.1); 
 }
+#name-info {
+  text-align: center;
+  border-style: inset;
+  border-color: mediumvioletred;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px;
+  background: darkseagreen;
+  transition: all .2s ease-in-out; 
+}
+
+#name-info:hover { 
+  transform: scale(1.1); 
+}
 #contact-info {
   text-align: center;
   border-style: inset;
@@ -92,12 +108,6 @@
   width: 300px;
   height: 300px;
   border-radius: 25%;
-}
-.name-info {
-  width: 60%;
-  margin-left: 32%;
-  padding: 4%;
-  box-shadow: 0 0 8px 8px #F4D4B8 inset;
 }
 .all-info {
   width: 100%;
