--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
   text-align: center;
   border-style: inset;
   border-color: mediumvioletred;
-  margin-left: 32%;
+  margin-left: 300px;
   margin-right: 300px;
   margin-bottom: 25px;
   margin-top: 25px;
