--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@
 #name-info {
   text-align: center;
   border-style: inset;
+  width: 300px;
+  height: 300px;
+  border-radius: 25%;
   border-color: mediumvioletred;
   background: darkseagreen;
   transition: all .2s ease-in-out; 
