--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@
   width: 300px;
   height: 300px;
   border-radius: 25%;
+  margin-bottom: 25px;
+  margin-top: 25px;
   border-color: mediumvioletred;
   background: darkseagreen;
   transition: all .2s ease-in-out; 
