--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@
   height: 300px;
   border-radius: 25%;
 }
+#cat-img:hover { 
+  transform: scale(1.1); 
+}
 #nav-body{
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v935-aum-03_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9c34a3160a757b89ac9cb496bec6ca5c);
 }
@@ -64,8 +67,6 @@
   width: 300px;
   height: 300px;
   border-radius: 25%;
-  margin-bottom: 25px;
-  margin-top: 25px;
   border-color: mediumvioletred;
   background: darkseagreen;
   transition: all .2s ease-in-out; 
