--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,10 @@
   height: 300px;
   border-radius: 25%;
 }
+.plane-img {
+  margin-left: 2vw;
+  margin-right: 2vw;
+  width: 300px;
+  height: 300px;
+  border-radius: 25%;
+}
