--- a/css/style.css
+++ b/css/style.css
@@ -149,17 +149,14 @@
   background-color: rgba(255, 255, 255, 0.5);
   position: relative;
 }
-#plane-img{
-  width: 300px;
-  height: 300px;
-  border-radius: 25%;
-}
-#music-img{
-  width: 300px;
-  height: 300px;
-  border-radius: 25%;
-}
 .plane-img {
+  margin-left: 2vw;
+  margin-right: 2vw;
+  width: 300px;
+  height: 300px;
+  border-radius: 25%;
+}
+.music-img {
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
