--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,9 @@
   height: 300px;
   border-radius: 25%;
 }
+#movies-section {
+  float: left;
+  padding: 20px;
+  margin:20px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
