--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@
   border-radius: 25%;
 }
 #cat-section {
-  float: left;
+  float: center;
   padding: 20px;
   margin:20px;
   background-color: darkseagreen;
