--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,6 @@
   background-color: darkseagreen;
   border-radius: 25%;
 }
+#cat-body{
+  background-image:(https://images6.fanpop.com/image/photos/41700000/Spirited-Away-studio-ghibli-41738049-268-145.gif)
+}
