--- a/css/style.css
+++ b/css/style.css
@@ -176,5 +176,5 @@
   border-radius: 25%;
 }
 #cat-body{
-  background-image:(https://images6.fanpop.com/image/photos/41700000/Spirited-Away-studio-ghibli-41738049-268-145.gif)
+  background-image: url(https://images6.fanpop.com/image/photos/41700000/Spirited-Away-studio-ghibli-41738049-268-145.gif)
 }
