--- a/css/style.css
+++ b/css/style.css
@@ -176,5 +176,5 @@
   border-radius: 25%;
 }
 #cat-body{
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5T_hRpOARsQdiCpKj_lz1GxNEtopmmu07Tg&usqp=CAU)
+  background-image: url(https://pbs.twimg.com/media/Cd4NYvsVAAAyytt?format=jpg&name=large)
 }
