--- a/css/style.css
+++ b/css/style.css
@@ -176,5 +176,5 @@
   border-radius: 25%;
 }
 #cat-body{
-  background-image: url(https://pbs.twimg.com/media/Cd4NYvsVAAAyytt?format=jpg&name=large)
+  background-image: url(https://wallup.net/wp-content/uploads/2018/09/26/229246-anime-Studio_Ghibli-Spirited_Away.jpg)
 }
