--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,6 @@
 #cat-body{
   background-image: url(C:\Users\althea\Downloads\IMG_8500.JPG)
 }
+#hobbie-body{
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_Enn0meaGZeMxrQSjCbzPKF9t_oeBW35BdN7_xe2HsQ3MNnFfQt4xpStpxQqlRFCe_MQ&usqp=CAU)
+}
