--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
   border-radius: 25%;
 }
 #nav-body{
-    background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v935-aum-03_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9c34a3160a757b89ac9cb496bec6ca5c);
+    background-image: url(https://i.pinimg.com/474x/e1/d2/00/e1d200b65875b572a39d95907e9537f2.jpg);
 }
 #heading-info {
   text-align: center;
