--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,13 @@
 #contact-info {
   text-align: center;
   border-style: inset;
-  border-color: pink;
+  border-color: darkseagreen;
   margin-left: 300px;
   margin-right: 300px;
   margin-bottom: 25px;
   margin-top: 25px;
   padding: 10px;
-  background: darkseagreen;
+  background: pink;
   transition: all .2s ease-in-out; 
 }
 
