--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 .all-info {
   width: 100%;
   padding: 4%;
-  box-shadow: 0 0 8px 8px #F4D4B8 inset;
+  box-shadow: 0 0 8px 8px darkolivegreen inset;
 } 
 .cat-img {
   margin-left: 2vw;
