--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@
   border-radius: 25%;
 }
 #cat-body{
-  background-image: url(C:\Users\althea\Downloads\IMG_8500.JPG)
+  background-image: url(https://i.pinimg.com/474x/52/1a/0c/521a0cdc1c91ea6fb266dc1d494d342d.jpg)
 }
 #hobbie-body{
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_Enn0meaGZeMxrQSjCbzPKF9t_oeBW35BdN7_xe2HsQ3MNnFfQt4xpStpxQqlRFCe_MQ&usqp=CAU)
