--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@
   float: center;
   padding: 20px;
   margin:20px;
-  background-color: darkseagreen;
+  background-color: pink;
   border-radius: 25%;
 }
 #cat-body{
