--- a/css/style.css
+++ b/css/style.css
@@ -183,3 +183,9 @@
 #hobbie-body{
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_Enn0meaGZeMxrQSjCbzPKF9t_oeBW35BdN7_xe2HsQ3MNnFfQt4xpStpxQqlRFCe_MQ&usqp=CAU)
 }
+h1 {
+  background-color: mediumvioletred;
+  color: lightpink;
+  font-size: 60px;
+  text-align: center;
+}
