--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,15 @@
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_Enn0meaGZeMxrQSjCbzPKF9t_oeBW35BdN7_xe2HsQ3MNnFfQt4xpStpxQqlRFCe_MQ&usqp=CAU)
 }
 h3 {
-  background-color: pink;
-  color: lightpink;
-  font-size: 60px;
   text-align: center;
+  border-style: inset;
+  border-color: darkseagreen;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px;
+  background: pink;
+  transition: all .2s ease-in-out; 
 }
+
