--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@
 #hobbie-body{
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_Enn0meaGZeMxrQSjCbzPKF9t_oeBW35BdN7_xe2HsQ3MNnFfQt4xpStpxQqlRFCe_MQ&usqp=CAU)
 }
-h3 {
+#hobbies-section {
   text-align: center;
   border-style: inset;
   border-color: pink;
