--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,14 @@
 h2 {
   font-family: markerfelt;
 }
+h3 {
+  font-family: "Leelawadee";
+}
+
+p {
+font-family: "Merriweather";
+}
+
+li {
+font-family: "Merriweather";
+}
