--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@
   background: darkseagreen;
 }
 h2 {
-  font-family: markerfelt;
+  font-family: 'markerfelt';
 }
 h3 {
   font-family: "Leelawadee";
