--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,13 @@ h2 {
   font-family: 'markerfelt';
 }
 h3 {
-  font-family: "Leelawadee";
+  font-family: 'markerfelt';
 }
 
 p {
-font-family: "Merriweather";
+font-family: 'markerfelt';
 }
 
 li {
-font-family: "Merriweather";
+font-family: 'markerfelt';
 }
