--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@
   background: darkseagreen;
 }
 h2 {
-  font-family: Marker Felt, fantasy;
+  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif	;
 }
 h3 {
   font-family: 'markerfelt';
