--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@
   margin-top: 25px;
   padding: 10px;
   background: darkseagreen;
+ font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif	;
 }
 h2 {
   font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif	;
