--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@
   margin-top: 25px;
   padding: 10px;
   background: darkseagreen;
- font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif	;
+  font-family: Marker Felt, fantasy		;
 }
 h2 {
   font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif	;
