--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
   position: relative;
   border-radius: 25%;
 }
-.imageSlides  {
+.images-slideshow {
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
@@ -229,28 +229,28 @@
 @media screen and (min-width: 200px) and (max-width: 800px) {
   #nav h3{
     position: relative;
-    left: 4%; /* Change 1, so the text isn't uncomfortably close to the left side of the screen */
+    left: 4%; 
     box-sizing: border-box;
-    width: 96%; /* Change 2, so the text isn't uncomfortably close to the right side of the screen */
+    width: 96%; 
     margin: 0;
   }
   #nav p {
     position: relative;
-    left: 8%; /* Change 3, so the paragraph text is slightly staggered from the head and not too close to the left */
+    left: 8%; 
     box-sizing: border-box;
-    width: 84%; /* Change 4, so the paragraph text isn't too close to the right side and is proportional to the left side */ 
+    width: 84%;  
   }
   #bands li{
     position: relative;
-    left: 12%; /* Change 5, so the list is staggered from the paragraph body */
+    left: 12%; 
     box-sizing: border-box;
-    width: 88%; /* Change 6, so the content box doesn't go off screen */
+    width: 88%; 
   }
   #nav img {
     display: block;
-    margin-left: 20%; /* Change 7, so the image stays centered but scales better as the size changes */
-    margin-right: 20%; /* Change 8, so the image stays centered but scales better as the size changes */
-    width: 60%; /* Change 9, so the image stays centered but scales better as the size changes */
+    margin-left: 20%; 
+    margin-right: 20%; 
+    width: 60%; 
   }
 }
 /*slideshow*/
