--- a/css/style.css
+++ b/css/style.css
@@ -278,3 +278,12 @@
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
 }
+.imageSlides {
+  display: none
+}
+ 
+img {
+  margin: auto;
+  display: block;
+  width: 100%;
+}
