--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@
   width: 300px;
   height: 300px;
   border-radius: 25%;
+  margin: auto;
 }
 
 /* Hide the images by default */
@@ -296,16 +297,6 @@
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
 
 /* Number text (1/3 etc) */
 .numbertext {
