--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
   position: relative;
   border-radius: 25%;
 }
-.images-slideshow {
+.slideshow-container {
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
