--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,9 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 300px;
+  width: 300px;
+  height: 300px;
+  border-radius: 25%;  
   position: relative;
   margin: auto;
 }
