--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@
 * {box-sizing:border-box}
 
 /* Slideshow container */
-.slideshow-container {
+div#slideshow-container {
   width: 300px;
   height: 300px;
   border-radius: 25%;  
