--- a/css/style.css
+++ b/css/style.css
@@ -256,13 +256,12 @@
 * {box-sizing:border-box}
 
 /* Slideshow container */
-div#slideshow-container {
-  width: 300px;
-  height: 300px;
-  border-radius: 25%;  
+.slideshow-container {
+  max-width: 300px;
   position: relative;
   margin: auto;
 }
+
 
 .mySlides {
   display: none;
