trying to fix size

--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@
 * {box-sizing:border-box}
 
 /* Slideshow container */
-.slideshow-container {
+.slideshow {
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
