--- a/css/style.css
+++ b/css/style.css
@@ -344,3 +344,10 @@
   height: 500px;
   width: 100%;
 }
+.slide {
+  margin-left: 2vw;
+  margin-right: 2vw;
+  width: 350px;
+  height: 350px;
+  border-radius: 25%;
+}
