--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@
 * {box-sizing:border-box}
 
 /* Slideshow container */
-.slideshow {
+.slideshow-container {
   margin-left: 2vw;
   margin-right: 2vw;
   width: 300px;
@@ -343,11 +343,4 @@
 #map {
   height: 500px;
   width: 100%;
-}
-.slide {
-  margin-left: 2vw;
-  margin-right: 2vw;
-  width: 350px;
-  height: 350px;
-  border-radius: 25%;
 }
